[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
itertools = "0.12.1"
serde = "1.0.219"
serde_json = "1.0.141"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
